apps/homeassistant/mosquitto.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: ha
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto:2
        ports:
        - containerPort: 1883
        volumeMounts:
        - name: config-work
          mountPath: /mosquitto/config
        - name: data
          mountPath: /mosquitto/data
      volumes:
      - name: config-src
        configMap:
          name: mosquitto-config
      - name: config-work
        emptyDir: {}
      - name: data
        persistentVolumeClaim:
          claimName: mosquitto-data
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: ha
spec:
  type: NodePort
  selector:
    app: mosquitto
  ports:
  - name: mqtt
    port: 1883
    targetPort: 1883
    nodePort: 31883
EOF
