apps/homeassistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  namespace: ha
  annotations:
    cert-manager.io/cluster-issuer: local-ca
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - homeassistant.lab.lan
    secretName: homeassistant-lab-lan-tls
  rules:
  - host: homeassistant.lab.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homeassistant
            port:
              number: 8123
